// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/notification/demo/basic.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/custom-icon.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/custom-style.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/duration.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/placement.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px;margin-right:10px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="topRight"
        >
          topRight
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open the notification box
    </span>
  </button>
</div>
`;

exports[`renders ./components/notification/demo/update.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/with-btn.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/with-icon.md correctly 1`] = `
<div>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Info
    </span>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Error
    </span>
  </button>
</div>
`;
